# TVStreamer5

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  TVSTREAMER5.apk  TVSTREAMER5_V3.apk  install_deps.sh
scripts/: build_container.sh  run_container.sh
src/: ConfigManager.cpp  ConfigManager.h  HttpServer.cpp  HttpServer.h  StreamManager.cpp  StreamManager.h  TelegramNotifier.cpp  TelegramNotifier.h  UdpCbrOutput.cpp  UdpCbrOutput.h  UdpInput.cpp  UdpInput.h  UdpOutput.cpp  UdpOutput.h  UdpTsOutput.cpp  UdpTsOutput.h  UdpVbrOutput.cpp  UdpVbrOutput.h  main.cpp  utils.cpp  utils.h
